--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=PowersTrainsGym
+
+#Conexion  a MySQL
+
+spring.datasource.url=jdbc:mysql://localhost:3306/zona_fit_db?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=Deathbat134580
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+# Evitar que se cree el esquema en db
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=false
+
+#Desactivar Tomcat
+spring.main.web-application-type=none
+
