Listar por consola

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=PowersTrainsGym
 
 #Conexion  a MySQL
 
-spring.datasource.url=jdbc:mysql://localhost:3306/zona_fit_db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/powertrains_gym_db?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Deathbat134580
 
